--- a/style.css
+++ b/style.css
@@ -255,32 +255,7 @@ header {
 
 /*Sherbimet*/
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-padding-top: 2rem;
-  scroll-behavior: smooth;
-  list-style: none;
-  text-decoration: none;
-  font-family: "Poppins", sans-serif;
-}
 
-:root {
-  --main-color: #fe5b3d;
-  --second-color: #ffac38;
-  --text-color: #444;
-  --gradient: linear-gradient(#fe5b3d, #ffac38);
-  --gradient2:linear-gradient(#1827cd, #6068c4);
-  --gradient3:linear-gradient(#6068c4, #1827cd);
-}
-
-
-
-
-
-/*Sherbimet*/
 
 @media screen and (max-width: 815px){
 
@@ -298,6 +273,23 @@ header {
     max-height: 250px;
   }
 
+}
+
+.CTA{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.CTAshowroom{
+  width: 1500px;
+}
+
+.CTAbutton{
+  padding: 10px;
+  color: white;
+  background-color: var(--main-color);
+  border-radius: 10px;
 }
 
 .sherbimet{
